# pyemoji

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: build.yml
experiments/: decay.json  decay.py  ising.json  ising.py  randomwalk.py
models/: ising.json
pyemoji/: actions.py  agent.py  file_writers.py  main.py  model.py  rules.py  simulator.py  video.py
pyemoji/experiments/: decay.py  housing.py  ising.json  ising.py  perftest.py  randomwalk.py  simpledecay.py
pyemoji/tests/: test_rules.py
pyemoji/visualization/: images.py  pygame.py
tests/: test_load_model.py  test_rules.py  test_serialization.py
