[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyemoji"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "pydantic",
    "streamerate",
    "tqdm",
]
keywords = ["simulation", "agent-based simulation"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]


[project.optional-dependencies]
gui = [
    "pillow",
    "pygame"
]
dev = [
    "black>=26.3.1",
    "build",
    "flake8",
    "pandas-stubs==3.0.0.260204",
    "pytest",
    "ty>=0.0.24",
]

[tool.pytest.ini_options]
# Add your pytest configuration here

[tool.mypy]
# Add your mypy configuration here

[tool.flake8]
# Add your flake8 configuration here

[tool.black]
# Add your black configuration here
# Source - https://stackoverflow.com/a/76739181
# Posted by Charalamm, modified by community. See post 'Timeline' for change history
# Retrieved 2026-03-21, License - CC BY-SA 4.0

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["pyemoji"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
